[gd_scene load_steps=2 format=3 uid="uid://bgbielsopeojq"]

[ext_resource type="Script" path="res://gui/pause_menu/pages/main/main.gd" id="1_ux51c"]

[node name="Main" type="ReferenceRect"]
custom_minimum_size = Vector2(400, 400)
script = ExtResource("1_ux51c")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="Save Game" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Save Game
"

[node name="Load Game" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Load Game"

[node name="Exit Game" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Exit Game
"

[node name="Exit to Desktop" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Exit to Desktop"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit to Desktop" to="." method="_on_exit_to_desktop_pressed"]
